[package]
name = "tcphangupmonitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
nix = "0.23.0"
thiserror = "1.0.30"
tokio = {version="1.13.0",features=["macros","rt","net","io-util","sync"]}
